Sunila's UI Changes and Marker icon and font changed

--- a/src/app/pages/landing-page/locations/locations.component.html
+++ b/src/app/pages/landing-page/locations/locations.component.html
@@ -3,13 +3,13 @@
 <div class="col-md-2"></div>
 <div class="col-md-8">
   <div class="row">
-  <div class="col-md-4 loc-city"><img src="../../../../assets/landing-page-images/img-houston.png" />
+  <div class="col-md-4 col-sm-4 col-xs-4 loc-city"><img src="../../../../assets/landing-page-images/img-houston.png" />
   <h4>HOUSTON</h4>
   </div>
-  <div class="col-md-4 loc-city"><img src="../../../../assets/landing-page-images/img-dallas.png" />
+  <div class="col-md-4 col-sm-4 col-xs-4 loc-city"><img src="../../../../assets/landing-page-images/img-dallas.png" />
     <h4>DALLAS</h4>
   </div>
-  <div class="col-md-4 loc-city"><img src="../../../../assets/landing-page-images/img-austin.png" />
+  <div class="col-md-4 col-sm-4 col-xs-4 loc-city"><img src="../../../../assets/landing-page-images/img-austin.png" />
     <h4>AUSTIN</h4>
   </div>
 </div>
@@ -22,13 +22,13 @@
 <div class="col-md-2"></div>
 <div class="col-md-8">
   <div class="row">
-  <div class="col-md-4 loc-city"><img src="../../../../assets/landing-page-images/img-denver.png" />
+  <div class="col-md-4 col-sm-4 col-xs-4 loc-city"><img src="../../../../assets/landing-page-images/img-denver.png" />
   <h4>Denver</h4>
   </div>
-  <div class="col-md-4 loc-city"><img src="../../../../assets/landing-page-images/img-nyc.png" />
+  <div class="col-md-4 col-sm-4 col-xs-4 loc-city"><img src="../../../../assets/landing-page-images/img-nyc.png" />
     <h4>NYC</h4>
   </div>
-  <div class="col-md-4 loc-city"><img src="../../../../assets/landing-page-images/img-los.png" />
+  <div class="col-md-4 col-sm-4 col-xs-4 loc-city"><img src="../../../../assets/landing-page-images/img-los.png" />
     <h4>Los Angeles</h4>
   </div>
 </div>
