--- a/src/app/pages/landing-page/search-by-address/search-by-address.component.html
+++ b/src/app/pages/landing-page/search-by-address/search-by-address.component.html
@@ -2,6 +2,9 @@
     <div id='iconList' class="col-md-6">
       <div class="content">
         <h4>Search By Address</h4>
+        <a class="search-icon">
+            <i class="fa fa-search"></i>
+          </a>
         <input type="text" class="form-control" 
           placeholder="Search Nearest Location" autocorrect="off" autocapitalize="off" spellcheck="off" type="text"
           #search>
