--- a/src/app/pages/landing-page/header/header.component.html
+++ b/src/app/pages/landing-page/header/header.component.html
@@ -1,8 +1,8 @@
 <header class="mtop0">
 <div class="col-md-12">
-  <div class="col-md-3 col-sm-12 col-xs-12 logo"><a href=""><img src="../../../../assets/landing-page-images/logo-bottlerover.png"></a></div>
+  <div class="col-md-3 col-sm-12 col-xs-12 logo"><a [routerLink]="['/home']"><img src="../../../../assets/landing-page-images/logo-bottlerover.png"></a></div>
   <div class="col-md-7 col-sm-12 col-xs-12 slogan">Shop Beer, Wine and Liquor</div>
-  <div class="col-md-2 col-sm-12 col-xs-12 login"><a href="">Login <span><i class="fa fa-user-circle"></i></span></a></div>
+  <div class="col-md-2 col-sm-12 col-xs-12 login"><a [routerLink]="['/login']">Login <span><i class="fa fa-user-circle"></i></span></a></div>
 </div>
 </header>
 <div class="clearfix"></div>
