--- a/src/app/pages/landing-page/search-by-address/search-by-address.component.scss
+++ b/src/app/pages/landing-page/search-by-address/search-by-address.component.scss
@@ -9,6 +9,15 @@
         border: solid 5px #e91d24 !important; padding-left:5px; height: 45px;}
     h3{color: #fff; text-transform: uppercase; font-size: 1.5em;  margin-top: 10px;  font-family: 'CubanoRegular';}
     .pac-container{ z-index: 99999 !important;}
+    .search-icon {
+      position: absolute;
+      
+      left: 25px;
+      margin-top: 6px;
+  }
+  .search-icon::before{top: 55% !important;}
+  .search-icon::after{top: 1.5% !important;}
+  .control-section input.form-control{padding:6px 12px 6px 30px; }
 
 /* iPhone X in portrait & landscape */
 @media only screen 
@@ -321,6 +330,7 @@ and (orientation : portrait) {
   and (-webkit-device-pixel-ratio: 3) {
     .control-section{left:4%; width:92%; top:48% !important;}
   h4{ width:60% !important; font-size: 1em;}
+  .search-icon{ top:36px;}
 }
 
 /* HTC One portrait */
