--- a/src/app/pages/landing-page/store-locations/store-locations.component.html
+++ b/src/app/pages/landing-page/store-locations/store-locations.component.html
@@ -1,52 +1,66 @@
 <app-landing-page-header></app-landing-page-header>
 
-<div class="col-md-12 mtop15">
-    <div class="col-md-6">
-      <table width="100%">
-        <tr>
-          <td width="80%">
-            <a class="search-icon">
-              <i class="fa fa-search"></i>
-            </a>
-            <input type="text" class="form-control" placeholder="Search Nearest Location"
-              autocorrect="off" autocapitalize="off" spellcheck="off" type="text" #search>
-          </td>
-          <td class="filter"><img src="../../../assets/landing-page-images/icon-filter.png"> Filter</td>
-        </tr>
-      </table>
-      <div class="mtop15 border-bottom" *ngFor="let storeInfo of matchedStoreList" title="Select Store">
-          <div class="col-md-12">
-            <a class="store" (click)="navToStore(storeInfo)">
-              <table width="80%">
-                <tr>
-                  <td class="logo-store" width="20%" valign="top"><img [src]="storeInfo?.store?.StoreImage"></td>
-                  <td width="60%" valign="top">
-                    <p><strong>{{storeInfo?.store?.StoreName}}</strong><br>{{storeInfo?.store?.Address1}}<br></p>
-                  </td>
-                  <td width="" valign="top">
-                    <p>{{storeInfo?.miles | number:'1.1-2'}} Miles</p>
-                  </td>
-                </tr>
-              </table>
+<div class="col-md-12 mtop15 top-border">
+  <div class="col-md-6">
+    <table width="100%">
+      <tr>
+        <td width="100%">
+          <a class="search-icon">
+            <i class="fa fa-search"></i>
+          </a>
+          <input type="text" class="form-control" placeholder="Enter a address, city or zip code" autocorrect="off"
+            autocapitalize="off" spellcheck="off" type="text" #search>
+        </td>
+        <!-- <td class="filter"><img src="../../../assets/landing-page-images/icon-filter.png"> Filter</td> -->
+      </tr>
+    </table>
+    <div class="mtop15 border-bottom" *ngFor="let storeInfo of matchedStoreList" title="Select Store">
+      <div class="col-md-12">
+        <div class="row">
+          <a class="store" (click)="navToStore(storeInfo)">
+            <table width="100%">
+              <tr>
+                <td class="logo-store" width="20%" valign="top"><img [src]="storeInfo?.store?.StoreImage"></td>
+                <td width="40%" valign="top">
+                  <p><strong>{{storeInfo?.store?.StoreName}}</strong><br>{{storeInfo?.store?.Address1}}<br></p>
+                </td>
+                <td width="20%" valign="top">
+                  <p>{{storeInfo?.miles | number:'1.1-2'}} Miles</p>
+                </td>
 
-              <table width="20%">
-                <tr>
-                  <td class="icon1" width="30%"><img src="../../../assets/landing-page-images/icon-store.png" *ngIf="storeInfo?.store?.IsPickUpEnable" title="Pick Up"></td>
-                  <td class="icon2" width="30%"><img src="../../../assets/landing-page-images/icon-shipping.png" *ngIf="storeInfo?.store?.IsDeliveryEnable" title="Delivery"></td>
-                  <td class="icon3" width="30%"><img src="../../../assets/landing-page-images/icon-mobilepay.png" *ngIf="storeInfo?.store?.IsOnlinePayment" title="Online Payment"></td>
-                </tr>
-              </table>
-            </a>
-          </div>
+                <td width="20%" class="v-align">
+                  <table width="100%">
+                    <tr>
+                      <td class="icon1 text-center" width="30%"><img
+                          src="../../../assets/landing-page-images/icon-store.png"
+                          *ngIf="storeInfo?.store?.IsPickUpEnable" title="Pick Up"></td>
+                      <td class="icon2 text-center" width="30%"><img
+                          src="../../../assets/landing-page-images/icon-shipping.png"
+                          *ngIf="storeInfo?.store?.IsDeliveryEnable" title="Delivery"></td>
+                      <td class="icon3 text-center" width="30%"><img
+                          src="../../../assets/landing-page-images/icon-mobilepay.png"
+                          *ngIf="storeInfo?.store?.IsOnlinePayment" title="Online Payment"></td>
+                    </tr>
+                  </table>
+                </td>
+              </tr>
+            </table>
+          </a>
+        </div>
       </div>
     </div>
-    <div class="col-md-6">
-      <agm-map [zoom]="10" [latitude]="latitude" [longitude]="longitude">
-        <agm-marker  [iconUrl]="'../../../assets/landing-page-images/map-marker.png'" [latitude]="latitude" [longitude]="longitude" > </agm-marker>
-        <agm-marker *ngFor="let storeInfo of matchedStoreList" [latitude]="storeInfo?.store.Latitude" [longitude]="storeInfo?.store.Longitude" 
-        [label]="{text: storeInfo?.store.StoreName, color: '#000', fontWeight: 'bold'}"></agm-marker>
-      </agm-map>
+  </div>
+  <div class="col-md-6">
+    <agm-map [zoom]="10" [latitude]="latitude" [longitude]="longitude">
+      <agm-marker
+        [iconUrl]="icon" 
+        [latitude]="latitude"
+        [longitude]="longitude"> </agm-marker>
+      <agm-marker *ngFor="let storeInfo of matchedStoreList" [latitude]="storeInfo?.store.Latitude"
+        [longitude]="storeInfo?.store.Longitude"
+        [label]="{text: storeInfo?.store.StoreName, color: '#000', fontWeight: 'bold', fontSize: '15'}"></agm-marker>
+    </agm-map>
 
-    </div>
+  </div>
 </div>
 <app-landing-page-footer></app-landing-page-footer>
