--- a/src/app/pages/landing-page/store-locations/store-locations.component.html
+++ b/src/app/pages/landing-page/store-locations/store-locations.component.html
@@ -22,7 +22,9 @@
               <tr>
                 <td class="logo-store" width="20%" valign="top"><img [src]="storeInfo?.store?.StoreImage"></td>
                 <td width="40%" valign="top">
-                  <p><strong>{{storeInfo?.store?.StoreName}}</strong><br>{{storeInfo?.store?.Address1}}<br></p>
+                  <p><strong>{{storeInfo?.store?.StoreName}}</strong><br>{{storeInfo?.store?.Address1}} <span *ngIf="storeInfo?.store?.Address2">, {{storeInfo?.store?.Address2}}</span> <br>
+                    <span> {{storeInfo?.store?.City}}, {{storeInfo?.store?.State}} {{storeInfo?.store?.Zip}} </span>
+                  </p>
                 </td>
                 <td width="20%" valign="top">
                   <p>{{storeInfo?.miles | number:'1.1-2'}} Miles</p>
