--- a/src/app/pages/landing-page/banner/banner.component.scss
+++ b/src/app/pages/landing-page/banner/banner.component.scss
@@ -305,7 +305,7 @@ and (orientation : portrait) {
   and (device-height: 640px) 
   and (-webkit-device-pixel-ratio: 3) {
     
-    .header, .banner{ height: 450px !important;}
+    .header, .banner{ height: 450px !important; margin-top: 15px;}
 }
 
 /* HTC One portrait */
@@ -501,6 +501,15 @@ and (-webkit-min-device-pixel-ratio: 1) {
     span{ font-size: 0.25em; margin-right: 25%;}
     }
  }  
+
+ 
+ @media only screen and (device-width : 812px) and (device-height: 375px){ 
+    /* Retina styles here */
+    .header, .banner{ height: 450px !important;}
+  .hero-text{ font-size:8em !important; 
+    span{ font-size: 0.25em; margin-right: 25%;}
+    }
+}
 
  @media only screen and (min-width: 411px) and (orientation: portrait) {
   .hero-text{ font-size:5.5em !important; 
