--- a/src/app/pages/landing-page/store-locations/store-locations.component.scss
+++ b/src/app/pages/landing-page/store-locations/store-locations.component.scss
@@ -69,6 +69,8 @@ and (orientation : portrait) {
   and (orientation: portrait) {
     h4{ width: 38% !important;}
     .control-section{ top:144% !important;}
+    .search-icon{ margin-top:10px !important;}
+    .store{ padding: 0;}
 }
 
 /* iPhone 2 XL Landscape */
@@ -79,6 +81,8 @@ and (orientation : portrait) {
   and (orientation: landscape) {
     h4{ width: 38% !important;}
     .control-section{ top:144% !important;}
+    .search-icon{ margin-top:10px !important;}
+    .store{ padding: 0;}
 }
 
 /* iPhone 2 XL Target Portrait and Landscape */
@@ -88,6 +92,8 @@ and (orientation : portrait) {
   and (-webkit-device-pixel-ratio: 3.5) 
   and (orientation: landscape) {
     .control-section{left:4%; width:92%;}
+    .search-icon{ margin-top:10px !important;}
+    .store{ padding: 0;}
 }
 
 /* iPhone 6, 7, & 8 in portrait & landscape */
@@ -164,7 +170,7 @@ and (orientation : portrait) {
 and (min-device-width : 414px) 
 and (max-device-width : 736px) {
   .control-section{left:4%; width:92%;}
-
+  .store{ padding: 0;}
 }
 
 /* iPhone 6 Plus in landscape */
@@ -174,7 +180,8 @@ and (max-device-width : 736px)
 and (orientation : landscape) {
 h4{ width: 38% !important;}
 .control-section{ top:144% !important;}
-
+.search-icon{ margin-top:10px !important;}
+.store{ padding: 0;}
 }
 
 /* iPhone 6 Plus in portrait */
@@ -198,6 +205,12 @@ and (min-device-width : 320px)
 and (max-device-width : 568px) 
 and (orientation : landscape) {
 h4{ width:43% !important}
+.search-icon{ margin-top:10px !important;}
+.store{ padding: 0;}
+.logo-store img{ max-width: 90%;}
+.icon1 img{ max-width: 80%;}
+.icon2 img{ max-width: 100%;}
+.icon3 img{ max-width: 60%;}
 }
 
 /* iPhone 5 & 5S in portrait */
@@ -207,6 +220,12 @@ and (max-device-width : 568px)
 and (orientation : portrait) {
   .control-section{left:4%; width:92%; top:53% !important;}
   h4{ width:67% !important; font-size: 1em;}
+  .search-icon{ margin-top:10px !important;}
+  .store{ padding: 0;}
+  .logo-store img{ max-width: 90%;}
+  .icon1 img{ max-width: 80%;}
+  .icon2 img{ max-width: 100%;}
+  .icon3 img{ max-width: 60%;}
 }
 
 /* 
@@ -241,7 +260,7 @@ and (orientation : portrait) {
 @media only screen 
 and (min-device-width : 768px) 
 and (max-device-width : 1024px)  {
-  
+  .logo-store img{ max-width: 60% !important;}
   h4{ width:45% !important; font-size: 1em;}
 }
 
@@ -250,7 +269,14 @@ and (max-device-width : 1024px)  {
 and (min-device-width : 768px) 
 and (max-device-width : 1024px) 
 and (orientation : landscape) {
-  .control-section{top:60% !important;}
+  .control-section{top:60% !important;
+    .search-icon{ margin-top:10px !important;}
+    .store{ padding: 0;}
+    .logo-store img{ max-width: 60% !important;}
+    .icon1 img{ max-width: 60% !important;}
+    .icon2 img{ max-width: 95% !important;}
+    .icon3 img{ max-width: 47% !important;}
+  }
 }
 
 /* iPad in portrait */
@@ -259,6 +285,12 @@ and (min-device-width : 768px)
 and (max-device-width : 1024px) 
 and (orientation : portrait) {
   .control-section{top:48% !important;}
+  .search-icon{ margin-top:10px !important;}
+  .store{ padding: 0;}
+  .logo-store img{ max-width: 60%;}
+  .icon1 img{ max-width: 50% !important;}
+  .icon2 img{ max-width: 80% !important;}
+  .icon3 img{ max-width: 40% !important;}
 }
 
 /* Galaxy S3 portrait and landscape */
@@ -336,7 +368,7 @@ and (orientation : portrait) {
   and (device-height: 640px) 
   and (-webkit-device-pixel-ratio: 3) 
   and (orientation: landscape) {
-
+    
 }
 
 /* HTC One portrait and landscape */
@@ -345,10 +377,14 @@ and (orientation : portrait) {
   and (device-height: 640px) 
   and (-webkit-device-pixel-ratio: 3) {
     .control-section{left:4%; width:92%; top:48% !important;}
+    .logo-store img{max-width: 90%;}    
   h4{ width:60% !important; font-size: 1em;}
-  .search-icon{ top:5px;}
-  .store{ min-height: 90px;}
+  .search-icon{ margin-top:10px !important;}
+  .store{ min-height: 80px; padding: 0px;}
   .col-md-6 > agm-map{ margin-top: 15px; display: block;}
+  .icon1 img{max-width: 80%;}
+.icon2 img{max-width: 100%;}
+.icon3 img{max-width: 62%;}
 }
 
 /* HTC One portrait */
@@ -358,6 +394,7 @@ and (orientation : portrait) {
   and (-webkit-device-pixel-ratio: 3) 
   and (orientation: portrait) {
     .control-section{top:60% !important;}
+    .search-icon{ margin-top:10px !important;}
 }
 
 /* HTC One landscape */
@@ -367,6 +404,7 @@ and (orientation : portrait) {
   and (-webkit-device-pixel-ratio: 3) 
   and (orientation: landscape) {
     .control-section{top:48% !important;}
+    .search-icon{ margin-top:10px !important;}
 }
 
 /*
@@ -390,7 +428,9 @@ and (min-device-width : 768px)
 and (max-device-width : 1024px) 
 and (orientation : landscape)
 and (-webkit-min-device-pixel-ratio: 2) {
-
+.icon1 img{ max-width: 70%;}
+.icon2 img{ max-width: 100%;}
+.icon3 img{ max-width: 59%;}
 }
 
 /* Retina iPad in portrait */
@@ -528,6 +568,7 @@ and (-webkit-min-device-pixel-ratio: 1) {
   and (min-resolution: 192dpi) {
 
 }
+/*Pixel2*/
 @media
   only screen and (-webkit-min-device-pixel-ratio: 3.5),
   only screen and (   min--moz-device-pixel-ratio: 3.5),
@@ -537,9 +578,17 @@ and (-webkit-min-device-pixel-ratio: 1) {
   only screen and (                min-resolution: 3.5dppx) { 
   .control-section{top:150% !important; left:9%;}
   h4{font-size: 1.5em; width: 38% !important;}
+  .search-icon{ margin-top: 10px;}
+  .store{ padding: 0;}
  }
  @media only screen and (min-width: 411px) and (orientation: portrait) {
   .control-section{top:53% !important; left:9%;}
   h4{font-size: 1.5em; width: 70% !important;
     }
+    .search-icon{ margin-top: 10px;}
+    .logo-store img{ max-width: 90%;}
+    .icon1 img{ max-width: 80%;}
+    .icon2 img{ max-width: 100%;}
+    .icon3 img{ max-width: 60%;}
+    .store{ padding: 0px;}
    }
