Sunila's UI changes 11/06

--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -1,5 +1,5 @@
 <app-landing-page-header></app-landing-page-header>
-<app-landing-page-banner></app-landing-page-banner>
+<!-- <app-landing-page-banner></app-landing-page-banner> -->
 <app-landing-page-search-by-address></app-landing-page-search-by-address>
 <app-landing-page-locations></app-landing-page-locations>
 <app-landing-page-home-links></app-landing-page-home-links>
