--- a/src/app/pages/landing-page/search-by-address/search-by-address.component.html
+++ b/src/app/pages/landing-page/search-by-address/search-by-address.component.html
@@ -1,3 +1,11 @@
+<div class="col-md-12 header">
+  <div class="banner-img">
+  <div class="banner">
+  <div class="hero-text">Thirsty?
+      <span>Bottlerover to the rescue.</span>
+  </div>
+  
+  
   <div class="col-md-12 control-section">
     <div id='iconList' class="col-md-6">
       <div class="content">
@@ -12,3 +20,6 @@
       </div>
     </div>
   </div>
+</div>
+</div>
+</div>
