--- a/src/app/pages/landing-page/search-by-address/search-by-address.component.scss
+++ b/src/app/pages/landing-page/search-by-address/search-by-address.component.scss
@@ -1,7 +1,23 @@
-  .control-section{ position: absolute;
-    left: 15%;
-    top: 72% !important;
-    width: 80%;
+/*Banner and Banner Text*/
+.header{ height: 700px !important;}
+.banner{ 
+    background: url(../../../../assets/landing-page-images/bg-header.png) repeat-x left bottom; height: 700px !important; 
+    z-index: 100; position: absolute; width: 100%; left: 0px; top: 0px;} 
+.banner-img{ width: 100%; height: 96%; max-width: 100%; background: url(../../../../assets/landing-page-images/banner.png);
+    background-size: cover;}
+.hero-text{ color: #fff; font-size: 15em; font-family: 'CubanoRegular'; text-align: center; width: 100%; text-transform: uppercase; font-weight: 400;
+span{ font-size: 0.3em !important;
+    text-align: center;
+    text-transform: uppercase;
+    display: block;
+    line-height: 1px;
+ margin: 0 0px 75px 0}
+}
+  /*Banner and Banner Text*/
+
+  /*Search*/
+  .control-section{ 
+    width: 80%; margin-left: 298px;
     z-index: 99999;}
     h4{ color: #fff; white-space: nowrap; text-transform: uppercase;  font-family: 'CubanoRegular'; font-weight: 100; font-size: 1.3em; background: #e91d24; width: 40% !important; padding:10px 15px; margin-bottom: 0px;}
     .e-input-group{width: 100%;
@@ -18,7 +34,7 @@
   .search-icon::before{top: 55% !important;}
   .search-icon::after{top: 1.5% !important;}
   .control-section input.form-control{padding:6px 12px 6px 30px; }
-
+/*Search*/
 /* iPhone X in portrait & landscape */
 @media only screen 
 and (min-device-width : 375px) 
@@ -42,7 +58,11 @@ and (min-device-width : 375px)
 and (max-device-width : 812px) 
 and (-webkit-device-pixel-ratio : 3)
 and (orientation : portrait) {
-  .control-section{ top:43% !important;}
+  .control-section{}
+  .hero-text{ font-size:8em !important; 
+    span{ font-size: 0.25em !important;}
+    }
+    .header, .banner{ height: 450px !important;}
 }
 
 /* iPhone 2 XL in Portrait */
@@ -52,7 +72,7 @@ and (orientation : portrait) {
   and (-webkit-device-pixel-ratio: 3.5) 
   and (orientation: portrait) {
     h4{ width: 38% !important;}
-    .control-section{ top:144% !important;}
+    .control-section{ }
 }
 
 /* iPhone 2 XL Landscape */
@@ -62,7 +82,7 @@ and (orientation : portrait) {
   and (-webkit-device-pixel-ratio: 3.5) 
   and (orientation: landscape) {
     h4{ width: 38% !important;}
-    .control-section{ top:144% !important;}
+    .control-section{ }
 }
 
 /* iPhone 2 XL Target Portrait and Landscape */
@@ -71,7 +91,7 @@ and (orientation : portrait) {
   and (device-height: 823px) 
   and (-webkit-device-pixel-ratio: 3.5) 
   and (orientation: landscape) {
-    .control-section{left:4%; width:92%;}
+    .control-section{}
 }
 
 /* iPhone 6, 7, & 8 in portrait & landscape */
@@ -86,7 +106,7 @@ and (max-device-width : 667px) {
 and (min-device-width : 375px) 
 and (max-device-width : 667px) 
 and (orientation : landscape) {
-  .control-section{top:112% !important;}
+  .control-section{}
 }
 
 /* iPhone 6, 7, & 8 in portrait */
@@ -132,7 +152,11 @@ and (max-device-width : 667px) {
 and (min-device-width : 375px) 
 and (max-device-width : 667px) 
 and (orientation : landscape) {
-  .control-section{ top:117% !important;}
+  .control-section{}
+  .hero-text{ font-size:8em !important; 
+    span{ font-size: 0.25em !important;}
+    }
+    .header, .banner{ height: 450px !important;}
 }
 
 /* iPhone 6 in portrait */
@@ -147,8 +171,8 @@ and (orientation : portrait) {
 @media only screen 
 and (min-device-width : 414px) 
 and (max-device-width : 736px) {
-  .control-section{left:4%; width:92%;}
-
+  .control-section{ width: 92% !important; margin-left: 15px;}
+  .header, .banner{ height: 450px !important;}
 }
 
 /* iPhone 6 Plus in landscape */
@@ -157,8 +181,10 @@ and (min-device-width : 414px)
 and (max-device-width : 736px) 
 and (orientation : landscape) {
 h4{ width: 38% !important;}
-.control-section{ top:130% !important;}
-
+.control-section{ }
+.hero-text{ font-size:7.4em !important; margin-top: 6px;
+  span{ font-size: 0.25em; }
+  }
 }
 
 /* iPhone 6 Plus in portrait */
@@ -174,7 +200,11 @@ and (orientation : portrait) {
 @media only screen 
 and (min-device-width : 320px) 
 and (max-device-width : 568px) {
-  .control-section{left:4%; width:92%;}
+  .control-section{ margin-left: 15px;}
+  .hero-text{ font-size:6.8em !important; 
+    span{ font-size: 0.32em !important;}
+    }
+    .header, .banner{ height: 450px !important;}
 }
 
 /* iPhone 5 & 5S in landscape */
@@ -191,8 +221,9 @@ h4{ width:43% !important}
 and (min-device-width : 320px) 
 and (max-device-width : 568px) 
 and (orientation : portrait) {
-  .control-section{left:4%; width:92%; top:53% !important;}
+  .control-section{width:92%; }
   h4{ width:67% !important; font-size: 1em;}
+  .hero-text{ font-size:4em !important; }
 }
 
 /* 
@@ -236,7 +267,7 @@ and (max-device-width : 1024px)  {
 and (min-device-width : 768px) 
 and (max-device-width : 1024px) 
 and (orientation : landscape) {
-  .control-section{top:60% !important;}
+  .control-section{}
 }
 
 /* iPad in portrait */
@@ -244,7 +275,11 @@ and (orientation : landscape) {
 and (min-device-width : 768px) 
 and (max-device-width : 1024px) 
 and (orientation : portrait) {
-  .control-section{top:48% !important;}
+  .control-section{}
+  .hero-text{ font-size:8em !important; 
+    span{ font-size: 0.25em !important;}
+    }
+    .header, .banner{ height: 450px !important;}
 }
 
 /* Galaxy S3 portrait and landscape */
@@ -330,9 +365,13 @@ and (orientation : portrait) {
   and (device-width: 360px) 
   and (device-height: 640px) 
   and (-webkit-device-pixel-ratio: 3) {
-    .control-section{left:4%; width:92%; top:48% !important;}
+    .control-section{ width:92%;}
   h4{ width:60% !important; font-size: 1em;}
   .search-icon{ top:36px;}
+  .header, .banner{ height: 450px !important; margin-top: 15px;}
+  .hero-text{ font-size:4.5em !important; 
+    span{ font-size: 0.25em;}
+    }
 }
 
 /* HTC One portrait */
@@ -350,7 +389,10 @@ and (orientation : portrait) {
   and (device-height: 640px) 
   and (-webkit-device-pixel-ratio: 3) 
   and (orientation: landscape) {
-    .control-section{top:43% !important;}
+    .control-section{}
+    .hero-text{ font-size:4.5em !important; 
+      span{ font-size: 0.25em; }
+      }
 }
 
 /*
@@ -519,18 +561,28 @@ and (-webkit-min-device-pixel-ratio: 1) {
   only screen and (        min-device-pixel-ratio: 3.5),
   only screen and (                min-resolution: 538dpi),
   only screen and (                min-resolution: 3.5dppx) { 
-  .control-section{top:130% !important; left:9%;}
-  h4{font-size: 1.5em; width: 38% !important;}
+  .control-section{ margin-left: 15px !important;}
+  h4{font-size: 1.5em;}
+  .header, .banner{ height: 450px !important;}
+  .hero-text{ font-size:8em !important; 
+    span{ font-size: 0.25em;}
+    }
  }
 /*iphonex landscape */
 @media only screen and (device-width : 812px) and (device-height: 375px) { 
     /* Retina styles here */
-    .control-section{top:137% !important; left:7%;}
+    .control-section{ margin-left: 15px !important;}
+    .header, .banner{ height: 450px !important;}
+  .hero-text{ font-size:8em !important; 
+    span{ font-size: 0.25em !important;}
+    }
 }
                                 
 
  @media only screen and (min-width: 411px) and (orientation: portrait) {
-  .control-section{top:45% !important; left:0%;}
-  h4{font-size: 1.5em; width: 70% !important;
-    }
+  .control-section{ margin-left: 15px !important;}
+  h4{font-size: 1.5em; }
+    .hero-text{ font-size:5.5em !important; 
+      span{ font-size: 0.25em;}
+      }
    }
