Show all areas in address autocomplete text box, show state info when selected on State image and minor issue fixes

--- a/src/app/pages/landing-page/locations/locations.component.html
+++ b/src/app/pages/landing-page/locations/locations.component.html
@@ -1,39 +1,45 @@
 <div class="col-md-12">
-    <div class="row">
-<div class="col-md-2"></div>
-<div class="col-md-8">
   <div class="row">
-  <div class="col-md-4 col-sm-4 col-xs-4 loc-city"><img src="../../../../assets/landing-page-images/img-houston.png" />
-  <h4>HOUSTON</h4>
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
+      <div class="row">
+        <div class="col-md-4 col-sm-4 col-xs-4 loc-city" (click)="onStateSelect('Houston TX, USA')"><img
+            src="../../../../assets/landing-page-images/img-houston.png" />
+          <h4>HOUSTON</h4>
+        </div>
+        <div class="col-md-4 col-sm-4 col-xs-4 loc-city" (click)="onStateSelect('Dallas TX, USA')"><img
+            src="../../../../assets/landing-page-images/img-dallas.png" />
+          <h4>DALLAS</h4>
+        </div>
+        <div class="col-md-4 col-sm-4 col-xs-4 loc-city" (click)="onStateSelect('Austin TX, USA')"><img
+            src="../../../../assets/landing-page-images/img-austin.png" />
+          <h4>AUSTIN</h4>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-2"></div>
   </div>
-  <div class="col-md-4 col-sm-4 col-xs-4 loc-city"><img src="../../../../assets/landing-page-images/img-dallas.png" />
-    <h4>DALLAS</h4>
-  </div>
-  <div class="col-md-4 col-sm-4 col-xs-4 loc-city"><img src="../../../../assets/landing-page-images/img-austin.png" />
-    <h4>AUSTIN</h4>
-  </div>
-</div>
-</div>
-<div class="col-md-2"></div>
-</div>
 </div>
 <div class="col-md-12">
-    <div class="row">
-<div class="col-md-2"></div>
-<div class="col-md-8">
   <div class="row">
-  <div class="col-md-4 col-sm-4 col-xs-4 loc-city"><img src="../../../../assets/landing-page-images/img-denver.png" />
-  <h4>Denver</h4>
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
+      <div class="row">
+        <div class="col-md-4 col-sm-4 col-xs-4 loc-city" (click)="onStateSelect('Denver CO, USA')"><img
+            src="../../../../assets/landing-page-images/img-denver.png" />
+          <h4>Denver</h4>
+        </div>
+        <div class="col-md-4 col-sm-4 col-xs-4 loc-city" (click)="onStateSelect('NYC NY, USA')"><img
+            src="../../../../assets/landing-page-images/img-nyc.png" />
+          <h4>NYC</h4>
+        </div>
+        <div class="col-md-4 col-sm-4 col-xs-4 loc-city" (click)="onStateSelect('Los Angeles CA, USA')"><img
+            src="../../../../assets/landing-page-images/img-los.png" />
+          <h4>Los Angeles</h4>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-2"></div>
   </div>
-  <div class="col-md-4 col-sm-4 col-xs-4 loc-city"><img src="../../../../assets/landing-page-images/img-nyc.png" />
-    <h4>NYC</h4>
-  </div>
-  <div class="col-md-4 col-sm-4 col-xs-4 loc-city"><img src="../../../../assets/landing-page-images/img-los.png" />
-    <h4>Los Angeles</h4>
-  </div>
-</div>
-</div>
-<div class="col-md-2"></div>
-</div>
 </div>
 <div class="clearfix"></div>
