--- a/src/app/pages/landing-page/locations/locations.component.scss
+++ b/src/app/pages/landing-page/locations/locations.component.scss
@@ -1,5 +1,5 @@
 .loc-city img{ width: 100%; height: auto; max-width: 100%; }
-.loc-city{ margin-bottom: 30px; position: relative;}
+.loc-city{ margin-bottom: 30px; position: relative; cursor: pointer !important;}
 .loc-city h4{ color: #fff;
     font-weight: normal;
     position: absolute;
