--- a/src/app/pages/landing-page/search-by-address/search-by-address.component.html
+++ b/src/app/pages/landing-page/search-by-address/search-by-address.component.html
@@ -14,7 +14,7 @@
             <i class="fa fa-search"></i>
           </a>
         <input type="text" class="form-control" 
-          placeholder="Search by Address, City or Zip Code" autocorrect="off" autocapitalize="off" spellcheck="off" type="text"
+          placeholder="Search by Address, City or Zip Code" autocorrect="off" autocapitalize="off" spellcheck="off" type="text" [(ngModel)]="searchText"
           #search>
         <h3>Beer, Wine and Spirits delivered to your door.</h3>
       </div>
