--- a/src/app/pages/landing-page/store-locations/store-locations.component.html
+++ b/src/app/pages/landing-page/store-locations/store-locations.component.html
@@ -9,7 +9,7 @@
             <i class="fa fa-search"></i>
           </a>
           <input type="text" class="form-control" placeholder="Enter a address, city or zip code" autocorrect="off"
-            autocapitalize="off" spellcheck="off" type="text" #search>
+            autocapitalize="off" spellcheck="off" type="text" [(ngModel)]="searchText" #search>
         </td>
         <!-- <td class="filter"><img src="../../../assets/landing-page-images/icon-filter.png"> Filter</td> -->
       </tr>
