--- a/src/app/pages/landing-page/store/store.component.scss
+++ b/src/app/pages/landing-page/store/store.component.scss
@@ -5,6 +5,10 @@ h4.text-right{ margin-right: 9%; font-family: 'CubanoRegular'; font-size: 3em; t
 .margin40{ margin: 40px 0;}
 .btn-default{background: #64676d; font-family: 'CubanoRegular';  color: #fff; text-transform: uppercase; font-weight:normal; font-size: 2em; margin-top: 30px; padding: 10px 20px;}
 .btn-default:hover{ opacity: 0.8;}
+a {
+  text-decoration: none;
+  color: #fff;
+  }
 
 
 /* iPhone X in portrait & landscape */
