--- a/src/app/pages/landing-page/store/store.component.html
+++ b/src/app/pages/landing-page/store/store.component.html
@@ -1,14 +1,16 @@
 <div class="margin40">
   <div class="col-md-12">
     <header class="herotext">
-        Are you a liquor store?
+      Are you a liquor store?
     </header>
     <h4 class="text-right">We can send you customers.</h4>
     <h4 class="mtop40">Find out how you can join our network and be listed in our search options.</h4>
-<div class="col-md-12 text-center">
-  <button type="button" class="btn btn-lg btn-default">Click here for more info</button>
-</div>
+    <div class="col-md-12 text-center">
+      <button type="button" class="btn btn-lg btn-default">
+        <a href="https://www.bottlecapps.com/" target="_blank">Click here for more info</a>
+      </button>
+    </div>
 
   </div>
-  </div>
-  <div class="clearfix"></div>
+</div>
+<div class="clearfix"></div>
