--- a/src/app/pages/products/product-details/product-details.component.scss
+++ b/src/app/pages/products/product-details/product-details.component.scss
@@ -1,5 +1,5 @@
 @import "~src/variable.scss";
-
+.mbottom30{ margin-bottom: 30px;}
 .product_img{
     border-right: 1px solid #d0d0d0;
     height: auto;
