--- a/src/app/pages/landing-page/search-by-address/search-by-address.component.scss
+++ b/src/app/pages/landing-page/search-by-address/search-by-address.component.scss
@@ -2,8 +2,9 @@
 .header{ height: 700px !important;}
 .banner{ 
     background: url(../../../../assets/landing-page-images/bg-header.png) repeat-x left bottom; height: 700px !important; 
-    z-index: 100; position: absolute; width: 100%; left: 0px; top: 0px;} 
-.banner-img{ width: 100%; height: 96%; max-width: 100%; background: url(../../../../assets/landing-page-images/banner.png);
+    z-index: 100; position: absolute; width: 100%; left: 0px;  top: -28px;
+    background-size: contain;} 
+.banner-img{ width: 100%; height: 93%; max-width: 100%; background: url(../../../../assets/landing-page-images/banner.png);
     background-size: cover;}
 .hero-text{ color: #fff; font-size: 15em; font-family: 'CubanoRegular'; text-align: center; width: 100%; text-transform: uppercase; font-weight: 400;
 span{ font-size: 0.3em !important;
@@ -214,6 +215,7 @@ and (max-device-width : 568px)
 and (orientation : landscape) {
 h4{ width:43% !important}
 
+
 }
 
 /* iPhone 5 & 5S in portrait */
@@ -223,7 +225,8 @@ and (max-device-width : 568px)
 and (orientation : portrait) {
   .control-section{width:92%; }
   h4{ width:67% !important; font-size: 1em;}
-  .hero-text{ font-size:4em !important; }
+  .hero-text{ font-size:4em !important; margin-top: 35px !important; }
+  .banner{ top:-31px;}
 }
 
 /* 
@@ -267,7 +270,9 @@ and (max-device-width : 1024px)  {
 and (min-device-width : 768px) 
 and (max-device-width : 1024px) 
 and (orientation : landscape) {
-  .control-section{}
+  .control-section{ margin-left: 136px !important;}
+  .hero-text{ font-size:11em !important; margin-top: 48px; }
+  .banner{ top:-49px;}
 }
 
 /* iPad in portrait */
@@ -276,7 +281,7 @@ and (min-device-width : 768px)
 and (max-device-width : 1024px) 
 and (orientation : portrait) {
   .control-section{}
-  .hero-text{ font-size:8em !important; 
+  .hero-text{ font-size:8em !important;  margin-top: 58px;
     span{ font-size: 0.25em !important;}
     }
     .header, .banner{ height: 450px !important;}
@@ -381,6 +386,8 @@ and (orientation : portrait) {
   and (-webkit-device-pixel-ratio: 3) 
   and (orientation: portrait) {
    // .control-section{top:60% !important;}
+   .hero-text{ margin-top: 30px;}
+   .banner{ top:-46px;}
 }
 
 /* HTC One landscape */
@@ -567,6 +574,7 @@ and (-webkit-min-device-pixel-ratio: 1) {
   .hero-text{ font-size:8em !important; 
     span{ font-size: 0.25em;}
     }
+    .banner{ top:-31px;}
  }
 /*iphonex landscape */
 @media only screen and (device-width : 812px) and (device-height: 375px) { 
@@ -576,13 +584,14 @@ and (-webkit-min-device-pixel-ratio: 1) {
   .hero-text{ font-size:8em !important; 
     span{ font-size: 0.25em !important;}
     }
+    .banner{ top:-32px;}
 }
                                 
 
  @media only screen and (min-width: 411px) and (orientation: portrait) {
   .control-section{ margin-left: 15px !important;}
   h4{font-size: 1.5em; }
-    .hero-text{ font-size:5.5em !important; 
+    .hero-text{ font-size:5.5em !important; margin-top: 45px; 
       span{ font-size: 0.25em;}
       }
    }
