--- a/src/app/pages/landing-page/store-locations/store-locations.component.html
+++ b/src/app/pages/landing-page/store-locations/store-locations.component.html
@@ -21,25 +21,31 @@
             <table width="100%">
               <tr>
                 <td class="logo-store" width="20%" valign="top"><img [src]="storeInfo?.store?.StoreImage"></td>
-                <td width="40%" valign="top">
+                <td width="60%" valign="top">
                   <p><strong>{{storeInfo?.store?.StoreName}}</strong><br>{{storeInfo?.store?.Address1}} <span *ngIf="storeInfo?.store?.Address2">, {{storeInfo?.store?.Address2}}</span> <br>
                     <span> {{storeInfo?.store?.City}}, {{storeInfo?.store?.State}} {{storeInfo?.store?.Zip}} </span>
                   </p>
                 </td>
-                <td width="20%" valign="top">
-                  <p>{{storeInfo?.miles | number:'1.1-2'}} Miles</p>
-                </td>
+                
 
                 <td width="20%" class="v-align">
+                  
                   <table width="100%">
                     <tr>
-                      <td class="icon1 text-center" width="30%"><img
+                      <td colspan="3" valign="top">
+
+                            <p>{{storeInfo?.miles | number:'1.1-2'}} Miles</p>
+
+                      </td>
+                    </tr>
+                    <tr>
+                      <td class="icon1" width="30%"><img
                           src="../../../assets/landing-page-images/icon-store.png"
                           *ngIf="storeInfo?.store?.IsPickUpEnable" title="Pick Up"></td>
-                      <td class="icon2 text-center" width="30%"><img
+                      <td class="icon2" width="40%"><img
                           src="../../../assets/landing-page-images/icon-shipping.png"
                           *ngIf="storeInfo?.store?.IsDeliveryEnable" title="Delivery"></td>
-                      <td class="icon3 text-center" width="30%"><img
+                      <td class="icon3" width="30%"><img
                           src="../../../assets/landing-page-images/icon-mobilepay.png"
                           *ngIf="storeInfo?.store?.IsOnlinePayment" title="Online Payment"></td>
                     </tr>
@@ -60,7 +66,13 @@
         [longitude]="longitude"> </agm-marker>
       <agm-marker *ngFor="let storeInfo of matchedStoreList" [latitude]="storeInfo?.store.Latitude"
         [longitude]="storeInfo?.store.Longitude"
-        [label]="{text: storeInfo?.store.StoreName, color: '#000', fontWeight: 'bold', fontSize: '15'}"></agm-marker>
+        [label]="{text: storeInfo?.store.StoreName.substr(0,1), color: '#000', fontWeight: 'bold', fontSize: '15'}">
+        <agm-info-window>
+          <p><strong>{{storeInfo?.store?.StoreName}}</strong><br>{{storeInfo?.store?.Address1}} <span *ngIf="storeInfo?.store?.Address2">, {{storeInfo?.store?.Address2}}</span> <br>
+            <span> {{storeInfo?.store?.City}}, {{storeInfo?.store?.State}} {{storeInfo?.store?.Zip}} </span>
+          </p>
+        </agm-info-window>
+      </agm-marker>
     </agm-map>
 
   </div>
