--- a/src/app/pages/products/product-details/product-details.component.html
+++ b/src/app/pages/products/product-details/product-details.component.html
@@ -144,10 +144,12 @@
                             <span>View More</span>
                         </a>
                     </div>
+                    <div class="clearfix"></div>
                 </div>
+                <div class="clearfix"></div>
             </ng-container>
             <div class="Main_bottlesection">
-                <div class="col-lg-3 col-md-4 col-sm-4 col-xs-12" *ngFor="let product of productsList | slice:0:4">
+                <div class="col-lg-3 col-md-4 col-sm-4 col-xs-6 mbottom30" *ngFor="let product of productsList | slice:0:4">
                     <app-product [item]="product"></app-product>
                 </div>
                 <div class="col-xs-12 hidden-md hidden-lg visible-xs visible-xs">
