--- a/src/app/pages/products/product/product.component.html
+++ b/src/app/pages/products/product/product.component.html
@@ -27,7 +27,7 @@
         </div>
           <div class="col-md-6"><p class="price">{{item?.OfferPriceDisplay}}</p></div>
           <div class="clearfix"></div>
-          <div class="col-md-12"><h5 class="productname">{{item?.ProductName}}</h5></div>
+          <div class="col-md-12 producttitle"><h5 class="productname">{{item?.ProductName}}</h5></div>
           <div class="col-md-12"><p class="product_size">
             <span>{{item?.Size}}</span>
           </p></div>
