--- a/src/app/pages/products/product/product.component.scss
+++ b/src/app/pages/products/product/product.component.scss
@@ -41,8 +41,8 @@ and (max-device-width : 568px) {
   .margin_bottom img.second_img{ height: 100px !important;}
   i.icon-favor{ font-size: 20px !important;}
   i.icon-add-to-my-cart{ font-size: 24px;}
-  .margin_bottom{ height: 40%; min-height: 56%;}
-  .second_content{ height: 73% !important;}
+  //.margin_bottom{ height: 40%; min-height: 56%;}
+  //.second_content{ height: 73% !important;}
   .img_div{ margin-bottom: 0px !important; height: 210px !important;}
 }
 
@@ -57,7 +57,7 @@ and (orientation : landscape) {
   .margin_bottom img.second_img{ height: 100px !important;}
   i.icon-favor{ font-size: 20px !important;}
   i.icon-add-to-my-cart{ font-size: 24px;}
-  .margin_bottom{ height: 40%; min-height: 56%;}
+  .margin_bottom{ min-height: 56%;}
   .second_content{ height: 73% !important;}
   .img_div{ margin-bottom: 0px !important; height: 210px !important;}
   .margin-bottom-20{margin-bottom:45px !important;}
@@ -69,12 +69,13 @@ and (min-device-width : 320px)
 and (max-device-width : 568px) 
 and (orientation : portrait) {
   .Main_bottlesection img{
-    width:35px !important;
+    max-width:35px !important;
+    height: auto !important;
   }
-  .margin_bottom img.second_img{ height: 100px !important;}
+  .margin_bottom img.second_img{ height: auto !important;}
   i.icon-favor{ font-size: 20px !important;}
   i.icon-add-to-my-cart{ font-size: 24px;}
-  .margin_bottom{ height: 40%; min-height: 56%;}
-  .second_content{ height: 73% !important; float: left; margin-bottom:10px;}
+  .margin_bottom{ min-height: 45% !important;}
+  .second_content{ height: 67% !important; float: left; margin-bottom:10px;}
   .img_div{ margin-bottom: 0px !important; height: 210px !important;}
 }
