sunila ui changes 18-June

--- a/src/app/pages/agelimit/agelimit.component.scss
+++ b/src/app/pages/agelimit/agelimit.component.scss
@@ -83,7 +83,7 @@
     font-family: $poppins-bold;
     /*font-size: 2.8em;*/
     font-stretch: normal;
-    line-height: 0.38;
+    line-height: 1.38em;
     letter-spacing: normal;
     text-align: center;
     color: $lukas-color;
