--- a/src/app/pages/landing-page/footer/footer.component.html
+++ b/src/app/pages/landing-page/footer/footer.component.html
@@ -8,7 +8,7 @@
           469-420-9447 | <a href="bottlecapps.com" target="_blank">bottlecapps.com</a> | <a href="mailto:info@bottlecapps.com">info@bottlecapps.com</a>
           </div>
           <div class="clearfix"></div>
-    <div class="col-md-12 mtop30">Copyright &copy; 2019 Critical Telephone Applications, Inc., BOTTLECAPPS TM. All Rights Reserved.</div>
+    <div class="col-md-12 mtop30">Copyright &copy; 2019 Critical Telephone Applications, Inc., BOTTLECAPPS &trade;. All Rights Reserved.</div>
     <div class="clearfix"></div>
   </div>
   <div class="clearfix"></div>
